# bevy_3ds

./: .gitignore  Cargo.toml
crates/bevy_3ds_core/: Cargo.toml
crates/bevy_3ds_core/src/: util.rs
crates/bevy_3ds_input/: Cargo.toml  README.md
crates/bevy_3ds_input/src/: _3ds.rs  axis.rs  button.rs  event.rs  lib.rs  settings.rs  test.rs
crates/bevy_3ds_macros/: Cargo.toml
crates/bevy_3ds_macros/src/: lib.rs
crates/bevy_3ds_pbr/: Cargo.toml
crates/bevy_3ds_pbr/src/: lib.rs  lights.rs
crates/bevy_3ds_render/: Cargo.toml
crates/bevy_3ds_render/src/: bottom_screen.rs  draw.rs  extract.rs  frame.rs  gpu_buffer.rs  lib.rs  lighting.rs  material.rs  materials.rs  pass.rs  plugin.rs  prep_asset.rs  vertattr.rs
crates/bevy_3ds_render/src/mesh/: draw.rs  gpu.rs  mesh.pica  mod.rs  plugin.rs
crates/bevy_3ds_render/src/pipeline/: mod.rs
crates/bevy_3ds_render/src/shader/: mod.rs
crates/bevy_3ds_render/src/texture/: mod.rs
crates/bevy_3ds_romfs/: Cargo.toml
crates/bevy_3ds_romfs/src/: reader.rs
crates/bevy_3ds_sprite/: Cargo.toml
crates/bevy_3ds_sprite/src/: lib.rs
crates/bevy_3ds_sprite/src/render/: mod.rs  shader.pica
crates/bevy_3ds_ui/: Cargo.toml
crates/bevy_3ds_ui/src/: lib.rs
examples/: bad_apple.rs  bottom_screen_image.rs  cornell-box.rs  joystick.rs  setup_logger.rs  simple_sprite.rs
romfs/assets/: cornell-box.glb
src/: default_plugins.rs  gpu_buffer.rs  lib.rs  main.rs  plugin_3ds.rs  plugins.rs  shims.rs
src/render/: draw.rs  extract.rs  mod.rs  pass.rs  plugin.rs  prep_asset.rs
src/render/mesh/: gpu.rs  mod.rs  plugin.rs  systems.rs
src/render/pipeline/: mod.rs
src/render/shader/: mod.rs
src/render/texture/: mod.rs
src/romfs_assets/: mod.rs  reader.rs
src/sprites/: mod.rs
src/sprites/render/: mod.rs  sprite.pica
src/ui/render/: mod.rs
