[package]
name = "bevy_3ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_ui", "bevy_asset"] }
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
citro3d = { git = "https://github.com/Team-Yarg/citro3d-rs", version = "0.1.0" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs", version = "0.1.0" }
fern = "0.6.2"
#bevy = { version = "0.12.1", default-features = false }
indexmap = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
petgraph = "0.6.4"
thiserror = "1.0.56"

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
libc = "0.2.151"
#ctru-sys = { git = "https://github.com/rust3ds/ctru-rs", version = "0.5.0" }
#libc = { version = "0.2.151", features = ["std"] }
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds", version = "0.1.0" }
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds", version = "0.1.0" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
