[package]
name = "bevy_3ds"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy_3ds_render = { path = "crates/bevy_3ds_render" }
bevy_3ds_sprite = { path = "crates/bevy_3ds_sprite" }
bevy_3ds_ui = { path = "crates/bevy_3ds_ui" }

bevy = { version = "0.12.1", default-features = false, features = ["bevy_ui", "bevy_asset", "png"] }
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
fern = "0.6.2"
image = "0.24.7"
#bevy = { version = "0.12.1", default-features = false }
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log-always"] }

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
libc = "0.2.151"
#ctru-sys = { git = "https://github.com/rust3ds/ctru-rs", version = "0.5.0" }
#libc = { version = "0.2.151", features = ["std"] }
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds", version = "0.1.0" }
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds", version = "0.1.0" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
