[package]
name = "bevy_3ds_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false }

ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
num-traits = "0.2.17"
tracing = "0.1.40"
