[package]
name = "bevy_3ds_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.12.1", default-features = false }

citro3d = { git = "https://github.com/Team-Yarg/citro3d-rs", version = "0.1.0" }
citro3d-sys = { git = "https://github.com/Team-Yarg/citro3d-rs", version = "0.1.0" }

ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }

swizzle_3ds = { git = "https://github.com/Team-Yarg/swizzle-3ds", version = "0.1.0" }
image = "0.24.7"

thiserror = "1.0.56"
log = "0.4.20"
