[package]
name = "bevy_3ds_sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_3ds_render = { version = "0.1.0", path = "../bevy_3ds_render" }
bevy_3ds_core = { version = "0.1.0", path = "../bevy_3ds_core" }

citro3d = {  version = "0.1.0", git = "https://github.com/Team-Yarg/citro3d-rs" }

bevy = { version = "0.12.1", default-features = false, features = ["bevy_sprite", "bevy_asset"] }
tracing = { version = "0.1.40" }
lazy_static = "1.4.0"
log = "0.4.20"
